--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,8 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
+version: 1.0.{build}-{branch}
+
 shallow_clone: true
 
 branches:
