--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 # Copyright 2016 Peter Dimov
 # Distributed under the Boost Software License, Version 1.0.
-# (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
+# (See accompanying file LICENSE_1_0.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
 version: 1.0.{build}-{branch}
 
