--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,6 @@ install:
   - ./b2 headers
 
 script:
-  - ./b2 libs/bind/test toolset=gcc,clang
+  - TOOLSET=gcc,clang
+  - if [ $TRAVIS_OS_NAME == osx ]; then TOOLSET=clang; fi
+  - ./b2 libs/bind/test toolset=$TOOLSET
