Enable Travis notifications on success

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,3 +47,7 @@ script:
   - TOOLSET=gcc,clang
   - if [ $TRAVIS_OS_NAME == osx ]; then TOOLSET=clang; fi
   - ./b2 libs/bind/test toolset=$TOOLSET
+
+notifications:
+  email:
+    on_success: always
