Do not checkout libs/bind, copy, because of pull requests.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ branches:
     - develop
 
 install:
-  - git clone -b %APPVEYOR_REPO_BRANCH% https://github.com/boostorg/boost.git boost
-  - cd boost
-  - git submodule init libs/bind
+  - cd ..
+  - git clone -b %APPVEYOR_REPO_BRANCH% https://github.com/boostorg/boost.git boost-root
+  - cd boost-root
   - git submodule init libs/align
   - git submodule init libs/assert
   - git submodule init libs/config
@@ -34,7 +34,7 @@ install:
   - git submodule init tools/inspect
   - git submodule update
   - cd libs\bind
-  - git checkout -q %APPVEYOR_REPO_COMMIT%
+  - xcopy %APPVEYOR_BUILD_FOLDER% /s /e /q
   - cd ..\..
   - bootstrap
   - b2 headers
