--- a/.travis.yml
+++ b/.travis.yml
@@ -158,6 +158,7 @@ matrix:
           packages:
             - clang-3.6
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.6
 
     - os: linux
@@ -167,6 +168,7 @@ matrix:
           packages:
             - clang-3.6
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.6
 
     - os: linux
@@ -176,6 +178,7 @@ matrix:
           packages:
             - clang-3.7
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.7
 
     - os: linux
@@ -185,6 +188,7 @@ matrix:
           packages:
             - clang-3.7
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.7
 
     - os: linux
@@ -194,6 +198,7 @@ matrix:
           packages:
             - clang-3.8
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.8
 
     - os: linux
@@ -203,6 +208,7 @@ matrix:
           packages:
             - clang-3.8
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.8
 
     - os: linux
@@ -212,6 +218,7 @@ matrix:
           packages:
             - clang-3.8
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.8
 
     - os: linux
@@ -221,6 +228,7 @@ matrix:
           packages:
             - clang-3.8
           sources:
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.8
 
     - os: osx
