--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,25 +15,11 @@ install:
   - cd ..
   - git clone -b %APPVEYOR_REPO_BRANCH% https://github.com/boostorg/boost.git boost-root
   - cd boost-root
-  - git submodule init libs/align
-  - git submodule init libs/assert
-  - git submodule init libs/config
-  - git submodule init libs/core
-  - git submodule init libs/function
-  - git submodule init libs/integer
-  - git submodule init libs/move
-  - git submodule init libs/mpl
-  - git submodule init libs/predef
-  - git submodule init libs/preprocessor
-  - git submodule init libs/smart_ptr
-  - git submodule init libs/static_assert
-  - git submodule init libs/throw_exception
-  - git submodule init libs/type_index
-  - git submodule init libs/type_traits
-  - git submodule init tools/build
-  - git submodule init tools/inspect
-  - git submodule update
+  - git submodule update --init tools/build
+  - git submodule update --init libs/config
+  - git submodule update --init tools/boostdep
   - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\bind
+  - python tools/boostdep/depinst/depinst.py bind
   - bootstrap
   - b2 headers
 
