--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,10 @@ environment:
       TOOLSET: msvc-14.0
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOOLSET: msvc-14.1
+      CXXSTD: 14
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      TOOLSET: msvc-14.1
+      CXXSTD: 17
 
 install:
   - set BOOST_BRANCH=develop
@@ -44,4 +48,5 @@ install:
 build: off
 
 test_script:
-  - b2 libs/bind/test toolset=%TOOLSET%
+  - if "%CXXSTD%" != "" set CXXSTD=cxxstd=%CXXSTD%
+  - b2 libs/bind/test toolset=%TOOLSET% %CXXSTD%
