--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,4 +40,4 @@ build: off
 
 test_script:
   - if not "%CXXSTD%" == "" set CXXSTD=cxxstd=%CXXSTD%
-  - b2 libs/bind/test toolset=%TOOLSET% %CXXSTD%
+  - b2 -j 3 libs/bind/test toolset=%TOOLSET% %CXXSTD%
