--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,7 +34,7 @@ install:
   - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\bind
   - python tools/boostdep/depinst/depinst.py bind
   - cmd /c bootstrap
-  - b2 headers
+  - b2 -d0 headers
 
 build: off
 
