--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Copyright 2018 Mike Dev
 # Distributed under the Boost Software License, Version 1.0.
 # See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt
+#
+# NOTE: CMake support for Boost.Bind is currently experimental at best
+#       and the interface is likely to change in the future
 
 cmake_minimum_required(VERSION 3.5)
 project(BoostBind LANGUAGES CXX)
@@ -15,4 +18,3 @@ target_link_libraries(boost_bind
         Boost::config
         Boost::core
 )
-
