--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,12 +28,8 @@ install:
   - cd ..
   - git clone -b %BOOST_BRANCH% --depth 1 https://github.com/boostorg/boost.git boost-root
   - cd boost-root
-  - git submodule update --init tools/build
-  - git submodule update --init tools/boost_install
-  - git submodule update --init libs/config
-  - git submodule update --init libs/headers
   - git submodule update --init tools/boostdep
-  - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\bind
+  - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\bind\
   - python tools/boostdep/depinst/depinst.py bind
   - cmd /c bootstrap
   - b2 -d0 headers
