--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,9 +15,9 @@ branches:
 environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
-      TOOLSET: msvc-9.0,msvc-10.0,msvc-11.0,msvc-12.0
+      TOOLSET: msvc-9.0,msvc-10.0,msvc-11.0
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLSET: msvc-14.0
+      TOOLSET: msvc-12.0,msvc-14.0
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOOLSET: msvc-14.1
       CXXSTD: 14,17
@@ -38,4 +38,5 @@ build: off
 
 test_script:
   - if not "%CXXSTD%" == "" set CXXSTD=cxxstd=%CXXSTD%
-  - b2 -j 3 libs/bind/test toolset=%TOOLSET% %CXXSTD%
+  - if not "%TOOLSET%" == "msvc-9.0,msvc-10.0,msvc-11.0" set ADDRMDL=address-model=32,64
+  - b2 -j 3 libs/bind/test toolset=%TOOLSET% %CXXSTD% %ADDRMDL%
