--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ language: cpp
 
 sudo: false
 
+dist: trusty
+
 branches:
   only:
     - master
@@ -113,6 +115,16 @@ matrix:
         apt:
           packages:
             - g++-8
+          sources:
+            - ubuntu-toolchain-r-test
+
+    - os: linux
+      compiler: g++-9
+      env: TOOLSET=gcc COMPILER=g++-9 CXXSTD=03,11,14,17,2a
+      addons:
+        apt:
+          packages:
+            - g++-9
           sources:
             - ubuntu-toolchain-r-test
 
@@ -237,6 +249,17 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-trusty-7
+
+    - os: linux
+      compiler: clang++-8
+      env: TOOLSET=clang COMPILER=clang++-8 CXXSTD=03,11,14,17,2a
+      addons:
+        apt:
+          packages:
+            - clang-8
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-8
 
     - os: linux
       compiler: clang++-libc++
