--- a/test/cmake_install_test/CMakeLists.txt
+++ b/test/cmake_install_test/CMakeLists.txt
@@ -4,12 +4,10 @@
 
 cmake_minimum_required(VERSION 3.5...3.16)
 
-project(cmake_subdir_test LANGUAGES CXX)
+project(cmake_install_test LANGUAGES CXX)
 
-add_subdirectory(../.. boostorg/bind)
-add_subdirectory(../../../assert boostorg/assert)
-add_subdirectory(../../../config boostorg/config)
-add_subdirectory(../../../core boostorg/core)
+find_package(boost_bind REQUIRED)
+find_package(boost_core REQUIRED)
 
 add_executable(quick ../quick.cpp)
 target_link_libraries(quick Boost::bind Boost::core)
