--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-# Copyright 2016-2019 Peter Dimov
+# Copyright 2016-2020 Peter Dimov
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE_1_0.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
@@ -21,6 +21,10 @@ environment:
       ADDRESS_MODEL: 32,64
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOOLSET: msvc-14.1,clang-win
+      CXXSTD: 14,17
+      ADDRESS_MODEL: 32,64
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      TOOLSET: msvc-14.2
       CXXSTD: 14,17
       ADDRESS_MODEL: 32,64
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
